--- a/menu.html
+++ b/menu.html
@@ -32,12 +32,11 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex align-items-center header-transparent">
+  <header id="atasmenu" class="fixed-top d-flex align-items-center header-transparent">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <div class="logo me-auto">
 		<h1><a href="index.html">DiskonKuyy</a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
 
@@ -64,7 +63,7 @@
   
   <main id="main">
     <!-- ======= Menu Section ======= -->
-	<img src="assets/img/slide/header.jpg" alt="Italian Trulli" width="100%" height="5%">
+	<img src="assets/img/slide/header.jpg" width="100%" height="5%">
     <section id="menu" class="menu">
       <div class="container">
 
@@ -100,7 +99,31 @@
               Lorem, deren, trataro, filede, nerada
             </div>
           </div>
-
+		  <div class="col-lg-6 menu-item filter-burgerking">
+            <div class="menu-content">
+              <a href="#">1pc Ayam + Nasi</a><span> <s>25.000</s> Rp15.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+		  		  <div class="col-lg-6 menu-item filter-burgerking">
+            <div class="menu-content">
+              <a href="#">Regular Fries</a><span> <s>8.000</s> Rp6.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+		  		  <div class="col-lg-6 menu-item filter-burgerking">
+            <div class="menu-content">
+              <a href="#">Milo Float</a><span> <s>15.000</s> Rp7.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+		  
           <!-- Janji Jiwa -->
 		  <div class="col-lg-6 menu-item filter-janjiw">
             <div class="menu-content">
@@ -246,7 +269,7 @@
           </div>
 		  <div class="col-lg-6 menu-item filter-bakmi">
             <div class="menu-content">
-              <a href="#"> 2 x 3 Pcs Wings Rice Set</a><span> <s>50.454</s> Rp42.000 </span>
+              <a href="#">Bihun Special GM</a><span> <s>33.367</s> Rp22.000 </span>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -254,7 +277,7 @@
           </div>
 		  <div class="col-lg-6 menu-item filter-bakmi">
             <div class="menu-content">
-              <a href="#">Reguler Boneless Rice Set</a><span> <s>30.000</s> Rp21.000 </span>
+              <a href="#">Bihun Ayam Lada Cha-Cha</a><span> <s>26.364</s> Rp22.000 </span>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -262,7 +285,7 @@
           </div>
 		  <div class="col-lg-6 menu-item filter-bakmi">
             <div class="menu-content">
-              <a href="#"> 2 x 3 Pcs Wings Rice Set</a><span> <s>50.454</s> Rp42.000 </span>
+              <a href="#">Nasi Ayam GM</a><span> <s>30.000</s> Rp22.000 </span>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -270,7 +293,7 @@
           </div>
 		  <div class="col-lg-6 menu-item filter-bakmi">
             <div class="menu-content">
-              <a href="#"> 2 x 3 Pcs Wings Rice Set</a><span> <s>50.454</s> Rp42.000 </span>
+              <a href="#">Ayam Lada Cha-Cha Frozen</a><span> <s>26.364</s> Rp22.000 </span>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
