--- a/menu.html
+++ b/menu.html
@@ -76,14 +76,18 @@
             <ul id="menu-flters">
               <li data-filter="*" class="filter-active">Lihat Semua</li>
 			  <li data-filter=".filter-abuba">Abuba Steak</li>
-			  <li data-filter=".filter-bakmi">Bakmi GM</li>
-			  <li data-filter=".filter-bangor">Burger Bangor</li>
+			  <li data-filter=".filter-aw">A&W</li>
+		    	  <li data-filter=".filter-bakmi">Bakmi GM</li>
+			  <li data-filter=".filter-baskin">Baskin Robbins</li>
+		    	  <li data-filter=".filter-bangor">Burger Bangor</li>
 		          <li data-filter=".filter-burgerking">Burger King</li>
 			  <li data-filter=".filter-chigo">Chigo</li>
-			  <li data-filter=".filter-hokben">HokBen</li>
+			  <li data-filter=".filter-gokana">Gokana Ramen & Teppan</li>
+		    	  <li data-filter=".filter-hokben">HokBen</li>
               		  <li data-filter=".filter-janjiw">Janji Jiwa</li>
 			  <li data-filter=".filter-kimu">Kimukatsu</li>
-		          <li data-filter=".filter-ricis">Richeese Factory</li>
+		          <li data-filter=".filter-pocha">Pocha Jjang</li>
+		    	  <li data-filter=".filter-ricis">Richeese Factory</li>
 			  <li data-filter=".filter-trafbun">Traffic Bun</li>
 		          <li data-filter=".filter-warstik">Waroeng Steak</li>
 			  <li data-filter=".filter-xiboba">Xiboba</li>
@@ -227,7 +231,15 @@
               Lorem, deren, trataro, filede, nerada
             </div>
           </div>
-
+	  <div class="col-lg-6 menu-item filter-xiboba">
+            <div class="menu-content">
+              <a href="#">Brown Sugar Boba [Milk Tea + Fresh Milk]</a><span> <s>46.000</s> Rp33.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+		
           <!-- Chigo -->
 	  <div class="col-lg-6 menu-item filter-chigo">
             <div class="menu-content">
@@ -264,6 +276,14 @@
 	  <div class="col-lg-6 menu-item filter-chigo">
             <div class="menu-content">
               <a href="#"> Regular Lemon Tea</a><span> <s>10.000</s> Rp7.200 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+	  <div class="col-lg-6 menu-item filter-chigo">
+            <div class="menu-content">
+              <a href="#"> Original Fries</a><span> <s>17.500</s> Rp13.500 </span>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -386,6 +406,94 @@
 	  <div class="col-lg-6 menu-item filter-kimu">
             <div class="menu-content">
               <a href="#">Beef Original Katsu Set</a><span> <s>115.000</s> Rp99.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+
+          <!-- Gokana Ramen & Teppan -->
+	  <div class="col-lg-6 menu-item filter-gokana">
+            <div class="menu-content">
+              <a href="#">Beef Yaki Udon</a><span> <s>35.500</s> Rp25.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+	  <div class="col-lg-6 menu-item filter-gokana">
+            <div class="menu-content">
+              <a href="#">Chicken Hot Ramen</a><span> <s>34.500</s> Rp25.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+	  <div class="col-lg-6 menu-item filter-gokana">
+            <div class="menu-content">
+              <a href="#">Katsu Bento</a><span> <s>29.000</s> Rp25.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+
+          <!-- Baskin Robbins -->
+	  <div class="col-lg-6 menu-item filter-baskin">
+            <div class="menu-content">
+              <a href="#">Pint</a><span> <s>290.000</s> Rp145.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+	  <div class="col-lg-6 menu-item filter-baskin">
+            <div class="menu-content">
+              <a href="#">Quart</a><span> <s>415.000</s> Rp207.500 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+	  <div class="col-lg-6 menu-item filter-baskin">
+            <div class="menu-content">
+              <a href="#">Half Gallon</a><span> <s>750.000</s> Rp375.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+
+          <!-- A&W -->
+	  <div class="col-lg-6 menu-item filter-aw">
+            <div class="menu-content">
+              <a href="#">6 Aroma Chicken + 1 Mozza Burger</a><span> <s>150.000</s> Rp112.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+	  <div class="col-lg-6 menu-item filter-aw">
+            <div class="menu-content">
+              <a href="#">3 Aroma Chicken + 2 Rice</a><span> <s>75.000</s> Rp60.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+
+          <!-- Pocha Jjang -->
+	  <div class="col-lg-6 menu-item filter-pocha">
+            <div class="menu-content">
+              <a href="#">Frozen Premium Bulgogi & Soy Honey</a><span> <s>99.000</s> Rp74.000 </span>
+            </div>
+            <div class="menu-ingredients">
+              Lorem, deren, trataro, filede, nerada
+            </div>
+          </div>
+	  <div class="col-lg-6 menu-item filter-pocha">
+            <div class="menu-content">
+              <a href="#">Ricebox Bulgolgi + Soy Honey + Crispy Chicken</a><span> <s>50.000</s> Rp38.000 </span>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
