--- a/index.html
+++ b/index.html
@@ -208,8 +208,7 @@
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>Tahun Baru Masehi</h3>
-                    <p class="fst-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p>
-                    <p>Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui similique accusamus nostrum rem vero</p>
+                    <p>Promo tahun baru terbaik setiap tahun datang lagi! Raih semua kode promo dan voucher spesial tahun baru dari berbagai tempat kuliner di seluruh Indonesia. Kalian bisa belanja berbagai kuliner dengan diskon besar-besaran menyambut tahun baru.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-1.jpg" alt="" class="img-fluid">
