--- a/index.html
+++ b/index.html
@@ -140,17 +140,12 @@
 
             <div class="content">
               <h3>Tentang DiskonKuyy</strong></h3>
-              <p>DiskonKuyy menyediakan website untuk para promo hunter agar dapat mencari informasi promo tempat kuliner yang diinginkan.</p>
+              <p>DiskonKuyy menyediakan website untuk para promo hunter agar dapat mencari informasi promo tempat kuliner yang diinginkan. Tidak perlu repot lagi mengecek satu per satu tempat kuliner untuk mengecek promo yang tersedia. Cukup dengan membuka situs DiskonKuyy, semua promo dari banyaknya tempat kuliner terpercaya di Indonesia sudah siap tersedia. Tinggal pilih kuliner favoritmu.</p>
               <ul>
-                <li><i class="bx bx-check-double"></i> Selalu up to date informasi promo diskon setiap tempat kuliner.</li>
+				<li><i class="bx bx-check-double"></i> Selalu up to date informasi promo diskon setiap tempat kuliner.</li>
                 <li><i class="bx bx-check-double"></i> Filterisasi yang unik dan mudah dicari.</li>
                 <li><i class="bx bx-check-double"></i> Data selalu valid.</li>
               </ul>
-              <!--<p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                culpa qui officia deserunt mollit anim id est laborum
-              </p>-->
             </div>
 
           </div>
@@ -160,9 +155,6 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Menu Section 
-    <section id="menu" class="menu">
-    </section>   ======= End Menu Section -->
 
     <!-- ======= Specials Section ======= -->
     <section id="specials" class="specials">
@@ -209,7 +201,8 @@
                   <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>Tahun Baru Masehi</h3>
                     <p>Promo tahun baru terbaik setiap tahun datang lagi! Raih semua kode promo dan voucher spesial tahun baru dari berbagai tempat kuliner di seluruh Indonesia. Kalian bisa belanja berbagai kuliner dengan diskon besar-besaran menyambut tahun baru.</p>
-                  </div>
+					<a href="menu.html" class="book-a-table-btn scrollto">Lihat Promo</a>
+				  </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-1.jpg" alt="" class="img-fluid">
                   </div>
@@ -219,9 +212,9 @@
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>Tahun Baru Imlek</h3>
-                    <p class="fst-italic">Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a videna mareta paulona marka</p>
-                    <p>Ea ipsum voluptatem consequatur quis est. Illum error ullam omnis quia et reiciendis sunt sunt est. Non aliquid repellendus itaque accusamus eius et velit ipsa voluptates. Optio nesciunt eaque beatae accusamus lerode pakto madirna desera vafle de nideran pal</p>
-                  </div>
+                    <p>Aneka diskon dan promo Imlek tersedia secara online di daftar menu DiskonKuyy. Dapatkan berbagai kode promo dan voucher dari berbagai tempat kuliner kesayangan kalian. Nikmati voucher spesial Imlek sepuasnya.</p>
+					<a href="menu.html" class="book-a-table-btn scrollto">Lihat Promo</a>
+				  </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-2.jpg" alt="" class="img-fluid">
                   </div>
@@ -231,8 +224,8 @@
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>Bulan Ramadhan</h3>
-                    <p class="fst-italic">Eos voluptatibus quo. Odio similique illum id quidem non enim fuga. Qui natus non sunt dicta dolor et. In asperiores velit quaerat perferendis aut</p>
-                    <p>Iure officiis odit rerum. Harum sequi eum illum corrupti culpa veritatis quisquam. Neque necessitatibus illo rerum eum ut. Commodi ipsam minima molestiae sed laboriosam a iste odio. Earum odit nesciunt fugiat sit ullam. Soluta et harum voluptatem optio quae</p>
+                    <p>Berbagai tempat kuliner sudah menyiapkan banyak promo di bulan Ramadhan. Banyak sekali promo yang tersedia untuk kalian agar kalian bisa menikmati sajian Ramadhan yang lebih praktis dan hemat dompet.</p>
+					<a href="menu.html" class="book-a-table-btn scrollto">Lihat Promo</a>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-3.jpg" alt="" class="img-fluid">
@@ -243,8 +236,8 @@
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>Lebaran Idul Fitri</h3>
-                    <p class="fst-italic">Totam aperiam accusamus. Repellat consequuntur iure voluptas iure porro quis delectus</p>
-                    <p>Eaque consequuntur consequuntur libero expedita in voluptas. Nostrum ipsam necessitatibus aliquam fugiat debitis quis velit. Eum ex maxime error in consequatur corporis atque. Eligendi asperiores sed qui veritatis aperiam quia a laborum inventore</p>
+                    <p>Biar Lebaran semakin meriah, jangan lupa cek promo Lebaran dari berbagai tempat kuliner, kalian bisa cek promo maupun diskon terbaik agar Perayaan Lebaran dan silaturahmi tetap maksimal. Pesan kuliner favorit kalian sambil silaturahmi bersama teman dan keluarga.</p>
+					<a href="menu.html" class="book-a-table-btn scrollto">Lihat Promo</a>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-4.jpg" alt="" class="img-fluid">
@@ -255,8 +248,8 @@
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>Hari Lahir Pancasila</h3>
-                    <p class="fst-italic">Omnis blanditiis saepe eos autem qui sunt debitis porro quia.</p>
-                    <p>Exercitationem nostrum omnis. Ut reiciendis repudiandae minus. Omnis recusandae ut non quam ut quod eius qui. Ipsum quia odit vero atque qui quibusdam amet. Occaecati sed est sint aut vitae molestiae voluptate vel</p>
+                    <p>Di Hari Lahir Pancasila kalian akan ditemani dengan promo makanan dan minuman yang murah meriah. Banyak promo, diskon, dan potongan harga yang menarik dari berbagai restoran dan gerai minuman. Semua promo ini bisa digunakan untuk jajan hemat.</p>
+					<a href="menu.html" class="book-a-table-btn scrollto">Lihat Promo</a>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-5.jpg" alt="" class="img-fluid">
@@ -267,8 +260,8 @@
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>Lebaran Idul Adha</h3>
-                    <p class="fst-italic">Omnis blanditiis saepe eos autem qui sunt debitis porro quia.</p>
-                    <p>Exercitationem nostrum omnis. Ut reiciendis repudiandae minus. Omnis recusandae ut non quam ut quod eius qui. Ipsum quia odit vero atque qui quibusdam amet. Occaecati sed est sint aut vitae molestiae voluptate vel</p>
+                    <p>Bagi yang hendak mempersiapkan hidangan Lezat pada hari raya Idul Adha. Ada Solusi nih bagi kalian yang mau belanja hemat sebagai tambahan kuliner untuk meramaikan perayaan Idul Adha. Terdapat beragam kuliner menarik yang menawarkan Promo Spesial Idul Adha.</p>
+					<a href="menu.html" class="book-a-table-btn scrollto">Lihat Promo</a>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-5.jpg" alt="" class="img-fluid">
@@ -279,8 +272,8 @@
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>Hari Kemerdekaan NKRI</h3>
-                    <p class="fst-italic">Omnis blanditiis saepe eos autem qui sunt debitis porro quia.</p>
-                    <p>Exercitationem nostrum omnis. Ut reiciendis repudiandae minus. Omnis recusandae ut non quam ut quod eius qui. Ipsum quia odit vero atque qui quibusdam amet. Occaecati sed est sint aut vitae molestiae voluptate vel</p>
+                    <p>Setiap tanggal 17 Agustus selalu diperingati sebagai Hari Kemerdekaan Indonesia. Dalam memeriahkan HUT NKRI, berbagai tempat kuliner memberikan ragam promo khusus untuk para pelanggan. Belanja semakin hemat dengan diskon yang ditawarkan untuk menyambut HUT NKRI!</p>
+					<a href="menu.html" class="book-a-table-btn scrollto">Lihat Promo</a>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-5.jpg" alt="" class="img-fluid">
@@ -291,8 +284,8 @@
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
                     <h3>Natal</h3>
-                    <p class="fst-italic">Omnis blanditiis saepe eos autem qui sunt debitis porro quia.</p>
-                    <p>Exercitationem nostrum omnis. Ut reiciendis repudiandae minus. Omnis recusandae ut non quam ut quod eius qui. Ipsum quia odit vero atque qui quibusdam amet. Occaecati sed est sint aut vitae molestiae voluptate vel</p>
+                    <p>Menjelang perayaan natal banyak tempat kuliner yang menawarkan diskon dan promo produk dalam rangka merayakan natal. Jangan lewatkan promo terbaru dan terkeren di hari Natal, mulai dari diskon, cashback, special offer dari berbagai tempat kuliner pilihan.</p>
+					<a href="menu.html" class="book-a-table-btn scrollto">Lihat Promo</a>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
                     <img src="assets/img/specials-5.jpg" alt="" class="img-fluid">
