--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 					<a href="menu.html" class="book-a-table-btn scrollto">Lihat Promo</a>
 				  </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-1.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/specials-1.png" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -216,7 +216,7 @@
 					<a href="menu.html" class="book-a-table-btn scrollto">Lihat Promo</a>
 				  </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-2.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/specials-2.png" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -228,7 +228,7 @@
 					<a href="menu.html" class="book-a-table-btn scrollto">Lihat Promo</a>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-3.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/specials-3.png" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -240,7 +240,7 @@
 					<a href="menu.html" class="book-a-table-btn scrollto">Lihat Promo</a>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-4.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/specials-4.png" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -252,7 +252,7 @@
 					<a href="menu.html" class="book-a-table-btn scrollto">Lihat Promo</a>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-5.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/specials-5.png" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -264,7 +264,7 @@
 					<a href="menu.html" class="book-a-table-btn scrollto">Lihat Promo</a>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-5.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/specials-6.png" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -276,7 +276,7 @@
 					<a href="menu.html" class="book-a-table-btn scrollto">Lihat Promo</a>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-5.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/specials-7.png" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -288,7 +288,7 @@
 					<a href="menu.html" class="book-a-table-btn scrollto">Lihat Promo</a>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-5.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/specials-8.png" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>			  
@@ -305,7 +305,6 @@
 
         <div class="section-title">
           <h2>Galeri foto dari <span>Tempat Kuliner</span></h2>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
         </div>
 
         <div class="row g-0">
